baml_language/crates/baml_tests/snapshots/compiles/type_annotation/baml_tests__compiles__type_annotation__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 23364
---
=== HIR2 ===
type user.MetaAlias = type
type user.MetaList = type[]
type user.MetaUnion = type | string
function user.test_type_annotation(function_name: string) -> string  [expr] {
  { let t: type = baml.llm.get_return_type(function_name); return "ok" }
}
class user.MetaField {
  type: type
}
class user.RiskFactor {
  type: string
  severity: float
}
enum user.Kind {type, other}
function user.test_let_binding(function_name: string) -> string  [expr] {
  { let t: type = baml.llm.get_return_type(function_name); return "ok" }
}
function user.test_list(function_name: string) -> string  [expr] {
  { let ts: type[] = []; return "ok" }
}
function user.test_map(function_name: string) -> string  [expr] {
  { let m: map<string, type> = map {  }; return "ok" }
}
function user.test_optional(function_name: string) -> string  [expr] {
  { let t: type? = null; return "ok" }
}
function user.test_param(t: type) -> string  [expr] {
  { return "ok" }
}
function user.test_return_type(function_name: string) -> type  [expr] {
  { return baml.llm.get_return_type(function_name) }
}
function user.test_union(function_name: string) -> string  [expr] {
  { let t: type | string = "hello"; return "ok" }
}
