baml_language/crates/baml_tests/snapshots/compiles/type_annotation/baml_tests__compiles__type_annotation__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
type user.MetaAlias = type
type user.MetaList = type[]
type user.MetaUnion = type | string
type user.MetaAlias$stream = unknown
type user.MetaList$stream = unknown[]
type user.MetaUnion$stream = unknown | string
function user.test_type_annotation(function_name: string) -> string throws never {
  { : never
    let t: type = baml.llm.get_return_type(function_name) : type
    return "ok" : "ok"
  }
}
class user.RiskFactor {
  type: string
  severity: float
}
function user.RiskFactor.to_json(self: user.RiskFactor) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<RiskFactor>(self)) : baml.json.json
}
function user.RiskFactor.from_json(j: baml.json.json) -> user.RiskFactor throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.RiskFactor
}
class user.MetaField {
  type: type
}
function user.MetaField.to_json(self: user.MetaField) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<MetaField>(self)) : baml.json.json
}
function user.MetaField.from_json(j: baml.json.json) -> user.MetaField throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.MetaField
}
enum user.Kind
class user.RiskFactor$stream {
  type: null | string
  severity: null | float
}
class user.MetaField$stream {
  type: unknown
}
function user.test_let_binding(function_name: string) -> string throws never {
  { : never
    let t: type = baml.llm.get_return_type(function_name) : type
    return "ok" : "ok"
  }
}
function user.test_param(t: type) -> string throws never {
  { : never
    return "ok" : "ok"
  }
}
function user.test_return_type(function_name: string) -> type throws never {
  { : never
    return baml.llm.get_return_type(function_name) : type
  }
}
function user.test_optional(function_name: string) -> string throws never {
  { : never
    let t: type? = null : null -> type?
    return "ok" : "ok"
  }
}
function user.test_list(function_name: string) -> string throws never {
  { : never
    let ts: type[] = [] : type[]
    return "ok" : "ok"
  }
}
function user.test_union(function_name: string) -> string throws never {
  { : never
    let t: type | string = "hello" : "hello" -> type | string
    return "ok" : "ok"
  }
}
function user.test_map(function_name: string) -> string throws never {
  { : never
    let m: map<string, type> = map {  } : map<string, type>
    return "ok" : "ok"
  }
}
