baml_language/crates/baml_tests/snapshots/compiles/type_annotation/baml_tests__compiles__type_annotation__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 23547
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
